version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/Mechanical/Graphics/Point.rst.txt
.. vale off



:class:`Point`
==============

.. py:class:: ansys.mechanical.stubs.v241.Ansys.Mechanical.Graphics.Point

   Bases: :py:obj:`object`


   
   Point class.
















   ..
       !! processed by numpydoc !!





.. py:currentmodule:: Point

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ConvertUnit`
            - Returns a new Point given new unit.
          * - :py:attr:`~op_Equality`
            - Equal operator
          * - :py:attr:`~op_Inequality`
            - Not-Equal operator


   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Object.Equals(object o) override
          * - :py:attr:`~GetHashCode`
            - Object.GetHashCode() override


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Location`
            - The location of the Point.
          * - :py:attr:`~Unit`
            - The length unit of the Point.







Property detail
---------------
.. py:property:: Location
   :type: Optional[list[float]]

   
   The location of the Point.
















   ..
       !! processed by numpydoc !!

.. py:property:: Unit
   :type: Optional[str]

   
   The length unit of the Point.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: ConvertUnit(inPoint: Ansys.Mechanical.Graphics.Point, outputUnit: str) -> Ansys.Mechanical.Graphics.Point
   :classmethod:


   
   Returns a new Point given new unit.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(o: Any) -> bool

   
   Object.Equals(object o) override

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   Object.GetHashCode() override

   ..
       !! processed by numpydoc !!

.. py:method:: op_Equality(a: Ansys.Mechanical.Graphics.Point, b: Ansys.Mechanical.Graphics.Point) -> bool
   :classmethod:


   
   Equal operator

   ..
       !! processed by numpydoc !!

.. py:method:: op_Inequality(a: Ansys.Mechanical.Graphics.Point, b: Ansys.Mechanical.Graphics.Point) -> bool
   :classmethod:


   
   Not-Equal operator

   ..
       !! processed by numpydoc !!



.. vale on