version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/Mechanical/Graphics/Point.rst.txt
.. vale off



:class:`Point`
==============

.. py:class:: ansys.mechanical.stubs.v242.Ansys.Mechanical.Graphics.Point(location: List[Any], lengthUnit: str)

   Bases: :py:obj:`object`






.. py:currentmodule:: Point

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ConvertUnit`
            - Returns a new Point given new unit.
          * - :py:attr:`~__eq__`
            - Equal operator
          * - :py:attr:`~__ne__`
            - Not-Equal operator


   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - Object.GetHashCode() override
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Location`
            - The location of the Point.
          * - :py:attr:`~Unit`
            - The length unit of the Point.







Property detail
---------------
.. py:property:: Location
   :type: Optional[List[float]]


   
   The location of the Point.
















   ..
       !! processed by numpydoc !!

.. py:property:: Unit
   :type: Optional[str]


   
   The length unit of the Point.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: ConvertUnit(inPoint: Ansys.Mechanical.Graphics.Point, outputUnit: str) -> Ansys.Mechanical.Graphics.Point
   :classmethod:


   
   Returns a new Point given new unit.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(point: Ansys.Mechanical.Graphics.Point) -> bool
               Equals(o: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   Object.GetHashCode() override

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!

.. py:method:: __eq__(a: Ansys.Mechanical.Graphics.Point, b: Ansys.Mechanical.Graphics.Point) -> bool
   :classmethod:


   
   Equal operator

   ..
       !! processed by numpydoc !!

.. py:method:: __ne__(a: Ansys.Mechanical.Graphics.Point, b: Ansys.Mechanical.Graphics.Point) -> bool
   :classmethod:


   
   Not-Equal operator

   ..
       !! processed by numpydoc !!



.. vale on